--- a/dubbo-admin-server/src/main/resources/application.properties
+++ b/dubbo-admin-server/src/main/resources/application.properties
@@ -14,6 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# web port
+#server.port=8080
 
 # centers in dubbo2.7
 admin.registry.address=zookeeper://127.0.0.1:2181
