--- a/dubbo-admin/src/main/resources/application.properties
+++ b/dubbo-admin/src/main/resources/application.properties
@@ -15,13 +15,13 @@
 # limitations under the License.
 #
 
-server.port=7001
+server.port=83
 spring.velocity.cache=false
 spring.velocity.charset=UTF-8
 spring.velocity.layout-url=/templates/default.vm
 spring.messages.fallback-to-system-locale=false
 spring.messages.basename=i18n/message
-spring.root.password=root
-spring.guest.password=guest
+spring.root.password=guoxianlong
+spring.guest.password=guoxianlong
 
 dubbo.registry.address=zookeeper://127.0.0.1:2181
