--- a/dubbo-monitor-simple/src/main/resources/conf/dubbo.properties
+++ b/dubbo-monitor-simple/src/main/resources/conf/dubbo.properties
@@ -22,8 +22,8 @@ dubbo.registry.address=zookeeper://127.0.0.1:2181
 #dubbo.registry.address=dubbo://127.0.0.1:9090
 dubbo.protocol.port=7070
 dubbo.jetty.port=8080
-dubbo.jetty.directory=${user.home}/monitor
-dubbo.charts.directory=${user.home}/monitor/charts
-dubbo.statistics.directory=${user.home}/monitor/statistics
-dubbo.log4j.file=logs/dubbo-monitor-simple.log
+dubbo.jetty.directory=/data/logs/dubbo/monitor
+dubbo.charts.directory=/data/logs/dubbo/monitor/charts
+dubbo.statistics.directory=/data/logs/dubbo/monitor/statistics
+dubbo.log4j.file=/data/logs/dubbo/dubbo-monitor-simple.log
 dubbo.log4j.level=WARN
